--- a/settings.json
+++ b/settings.json
@@ -3,7 +3,7 @@
     {
         "sound": 1.0,
         "music": 0.8,
-        "mode": "modern"
+        "classic": false
     },
     "keymapping":
     {
